<resources>
    <string name="app_name">Hotel_Guide</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="searchable">searchable</string>
   <string name="textView1">Hotels in India</string>
<string name="button">Click Here For Cities</string>
<string name="rb1">New Delhi</string>
<string name="rb2">Mumbai</string>
<string name="rb3">Pune</string>
<string name="rb4">Jaipur</string>
<string name="rb5">Lucknow</string>
<string name="rb6">Haydrabad</string>
<string name="rb7">Agra</string>
<string name="rb8">Goa</string>
<string name="rb9">Jodhpur</string>
<string name="rb">Varanasi</string>
<string name="b1">OK</string>
<string name="b2">Back</string>
<string name="tv">Varanasi</string>
<string name="tv1">Cities</string>
<string name="r">5 Star</string>
<string name="r1">4 Star</string>
<string name="r3">3 Star</string>
<string name="tv2">5 Star</string>
<string name="tv3">New Delhi</string>
<string name="tv4">Mumbai</string>
<string name="tv5">Pune</string>
<string name="tv6">Jaipur</string>
<string name="tv7">Lucknow</string>
<string name="tv8">Haydrabad</string>
<string name="tv9">Agra</string>
<string name="tv10">Goa</string>
<string name="tv11">Jodhpur</string>
<string name="wyndham_grand_agra">Wyndham Grand Agra</string>
<string name="h1">Alpina Hotel $ Suites</string>
<string name="the_ashok_new_delhi">The Ashok New Delhi</string>
<string name="fraser_suites_new_delhi">Fraser Suites New Delhi</string>
<string name="details">Situated in one of the oldest living cities of the world, on the banks of the river Ganges, Nadesar Palace has hosted royalty, statesmen and celebrities since 1835. \n The name Nadesar is derived from the Goddess Nadesari, whose shrine is located in the front of the Palace. \nSet amidst verdant gardens, mango orchards, marigold and jasmine fields, Nadesar Palace is a haven of peace and tranquility. \n\n\n Hotel Leisure and Other Services include:\n \n 1. Swimming pool \n2. Jiva Spa \n 3. Laundry \n 4. 4 hole Golf Course being developed \n5. Travel services \n6. Guided tours and sightseeing \n 7. Doctor on call \n 8. Astrologer (prior appointment needed)"</string>
<string name="detail1">Radisson Hotel Varanasi is a five-star hotel conveniently located in the heart of the city main business district. The hotel modern architecture, warm hospitality and top-notch services are sure to please business and leisure travelers. The Radisson features spacious, comfortable rooms and suites, an on-site spa, multiple dining outlets and well-equipped meeting facilities - a wealth of services not found at all Varanasi hotels. \n\n\n Our services include:\n \n 1.24-hour travel desk \n 2. Fully equipped Business Center \n 3.Curios and gift shop \n 4.Foreign currency exchange \n 5.State-of-the-art health club \n 6.Yoga and massage at the spa</string>
<string name="detail2">Stay in luxury on your vacation to the City of Temples when you book into our Ramada Plaza JHV Varanasi hotel.\n See popular attractions with ease from our hotel, located just minutes from the train station, or spend your day relaxing at our beautiful resort.\n Cool off with a swim in our refreshing outdoor pool, then enjoy delicious meals in our two specialty restaurants and coffee shops on-site. \n\n\n Accommodations:\n \n1. Elevator access to all levels \n2. Elevator near disability accessible rooms \n3. Flat terrain between parking and entrance \n4. Hotel entrance is wheel accessible \n5. Parking / drop off point adjacent to entrance \n6. Service animals allowed \n7. Wheelchair-Accessible Elevators</string>
<string name="detail3">The Clarks Group of Hotels is one of the oldest hotel chains in India. The splendid structure of the Clarks Varanasi - the flagship property of the Clarks Group of Hotels, dates back to over half a century. Having this heritage we believe in providing only the best of services and try to constantly exceed your expectations. \n\n\n Key points:\n \n• Non-smoking rooms * \n• Concierge service \n• Baggage handler \n• Wi-fi Internet access in common parts (payable) \n• Images Downloading facilities \n• 15 Minutes free Internet access for checking e-mails at Business Centre \n• Fitness Centre \n• Patio - garden \n• Outdoor swimming pool (Not heated) \n• Rooms are aesthetically and tastefully furnished. • Unlimited Free movies in the rooms. \n• Located in a nice and clean surroundings \n• Several Dining Options \n• 24 x 7 in room dining (Room Service) \n• 24 x 7 in house laundry \n• Free pressing service between 9 a.m. to 7 p.m. \n\n\n contact us:\n The Mall, Cantt.\n Varanasi - 221 002\n Tele : +91-542-2501011-20\n Fax : +91-542-2502736\n E-Mail : clarkvns@satyam.net.in\n</string>
<string name="detail4">The hotel is set amidst 40 acres of lush green gardens, just 21 kms (45 mins drive) from the airport, The Gateway Hotel, Ganges is the veritable haven of peace and tranquility in this crowded and ancient temple city. The hotel is 6 kms away from the city Centre or the commercial hub of Varanasi also commonly known as The Chowk. The hotel is constructed in the holy Swastik shape (The Swastika is an ancient symbol which re-presents good fortune and blessing). \n\n \n Accommodations:\n 130 rooms including 10 suites - all room are centrally air-conditioned.\n High-speed Internet and Wi-Fi available throughout the hotel.\n Swimming pool, Active studio, Spa.\n Three meeting rooms can accommodate 20 to 150 guests auditorium style.\n Gardens for large outdoor function.\n \n CONVENIENCES:\n \n Business Centre:\n 1.High-speed Internet with Wi-Fi option 2.Audiovisual equipment available\n 3.Workstations\n 4.Facsimile, photocopier facilities\n 5.Secretarial services\n 6.Mail services\n \n Active:\n 1.Fitness Centre\n 2.Swimming pool\n \n More:\n 1.24-hour room service\n 2.Laundry service/valet\n 3.Doctor-on-call\n 4.Travel assistance\n 5.Car hire service\n 6.Currency exchange\n 7.Florist\n</string>
<string name="detail5">Welcome to Varanasi, a city that embodies the spiritual soul of India, and whose beginnings over 2,500 years ago are steeped in Hindu mythology. \n A city that is the cosmic center of the Universe according to Hindu belief and where the Ganges, or "Mother Ganga", India holiest river, flows. \n A city that needs to be seen and appreciated in the warmth of a stay at, hotel meraden grand that is an oasis of luxury and makes a perfect setting for a fascinating city. \n\n \n CONVENIENCES:\n\n * Cold Towel / Welcome Drink\n * Personalized check in / personalized stationary / slippers\n * Bathrobe / choice of newspapers\n * Continental breakfast / Butler service\n * Fax arrangement in rooms / internet\n * Complimentary cocktail in bar (one)\n * Complimentary tea / coffee maker in room\n * Telephone calls (3 minutes) free anywhere in India (7-7 A.M.)\n * Express checkout\n * Hair dryer, weighing scale, shaving mirror in bathroom\n * Pressing iron/stand in room\n * Evening cookies\n * Free spouse stay\n * Choice of non smoking rooms on request\n \n\n *HOTEL MERADEN GRAND\n 57 Patel Nagar, Cantt., Varanasi - 221 002\n\n *Phone:\n 0542-2509952, 0542-2509953, 0542-2509954, 0542-2509957, 0542-2509959\n\n *Mobile:\n *Mr. Ran Vijay Singh (General Manager)\n +91 9415222993\n *Reservation:\n +91 9919916777\n\n</string>
<string name="detail6">Rivatas By Ideal offers modern rooms and suites with free Wi-Fi at The Mall Can nott in Varanasi. Featuring 3 food and beverage options, the property has an outdoor pool and offers massage services. The air-conditioned rooms come with heating and dark wood furnishings. Each room is equipped with a flat-screen satellite TV, electronic safe and seating area. \nTea/coffee making facilities and minibar are also provided. Private bathroom includes a shower, hairdryer and slippers. \n\n General:\n *Non-smoking rooms, Facilities for disabled guests, Lift/elevator, Safety deposit box, Shops in hotel, Non-smoking throughout, Air conditioning \n \n Services:\n *24-hour front desk, Express check-in/check-out, Luggage storage, Room service, Meeting/banquet facilities, Business centre, Babysitting/child services,Laundry, Dry cleaning, VIP room facilities, Ironing service, Currency exchange, Souvenirs/gift shop, Shoeshine, Packed lunches, Car hire, Tour desk, Fax/photocopying, Ticket service, Concierge service, Private check-in/check-out, Trouser press, Airport shuttle (surcharge). \n\n Food and Drink:\n *Bar, Snack bar, Special diet menus (on request) \n\n Activities:\n *Newspapers, Spa and wellness centre, Massage, Turkish/steam bath \n\n Outdoors:\n *BBQ facilities, Outdoor pool \n\n Internet:\n *Free! WiFi is available in the hotel rooms and is free of charge. \n\n Address:\n RIVATAS\n The Mall Road\n Cantonment Varanasi Zip-221002\n T: +91 542 30 410 00\n F: +91 542 30 410 01\n e-mail – sales@rivatas.com and fom@rivata\n</string>
<string name="detail7">A part of Clarks Group of Hotels, Hotel Clarks Avadh offers a royal ambience in the erstwhile city of Nawabs. With 98 well appointed rooms, restaurants offering regional specialties and an exclusive privilege club, the hotel promises a comfortable stay. \n \n *Location: \n The city centric location of Hotel Clarks Avadh offers easy access to the Charbagh railway station and main shopping area of Hazratganj. Bara Imambara, Rumi Darwaza, Aminabad Market, British Residency and Lucknow Zoo are some of the important places of tourist interest. \n \n *Hotel Features: \n Privilege Club is an exclusive floor dedicated to sophisticated business guests. It entitles guests to select services including a separate check-in and check-out, valet service, personalized stationary, computer and fax facilities. Conference and meeting rooms are equipped with the latest audio-visual technology. In addition, there is a full service business centre with a boardroom. A rooftop restaurant, Falaknuma delights guests with traditional delicacies of Avadhi cuisine. Gulfam, a 24-hour coffee shop, serves Chinese, Continental and South Indian cuisine. Guests can unwind with a dip in the swimming pool. The health club has state-of-the-art equipments. \n \n *Rooms: \n The hotel offers comfortable accommodation with 98 rooms. Executive rooms, privilege rooms and suites are the different accommodation options. The rooms are spacious and offer scenic views of the city. Each room has a satellite television, mini-bar and attached bathroom with hot and cold water. \n \n *Rooms: 98 \n *Floors: 8\n \n *Check-In: 1200 \n *Check-Out: 1200</string>
<string name="detail8">On the scenic banks of Gomti River, Vivanta by Taj Gomti Nagar provides stylish rooms in downtown Lucknow. Featuring beautiful domes and graceful pillars, this grand hotel provides an outdoor pool and 25 acres of landscaped gardens. \n Well-furnished rooms are fully air-conditioned and come with ergonomic work desks. Free tea/coffee making facilities, daily newspapers and mineral water are provided. En suite bathrooms have a bathtub.\n \n\n \n *Facilities of Vivanta by Taj Gomti Nagar\n \n 1.General:\n Non-smoking rooms, Facilities for disabled guests, Lift/elevator, Safety deposit box, Air conditioning, Wooden / Parquet floor, Safety Deposit Box. \n \n 2.Services:\n 24-hour front desk, Luggage storage, Room service, Meeting/banquet facilities, Airport shuttle, Business centre, Babysitting/child services, Laundry, Dry cleaning, Barber/beauty shop, Currency exchange, Souvenirs/gift shop, Car hire, Tour desk, Fax/photocopying, Concierge service. \n \n 3.Food and Drink:\n Bar, Restaurant (à la carte), Tea/Coffee Maker, Minibar \n \n 4.Internet:\n WiFi is available in all areas and charges are applicable. \n \n 5.Parking:\n Free! Free private parking is possible on site (reservation is not needed). \n \n 6.Check-in: From 14:00 hours \n 7.Check-out: Until 12:00 hours</string>
</resources>