<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@drawable/th">
  <TextView android:id="@+id/textView1" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_horizontal" android:text="@string/tv11" android:textSize="26sp" android:textStyle="italic|bold" android:textColor="#00ffff" /> 
<RadioGroup android:id="@+id/radioGroup2" android:layout_width="wrap_content" android:layout_height="wrap_content">
  <RadioButton android:id="@+id/rd1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/r" android:textColor="#00ff11" android:textSize="20sp" /> 
  <RadioButton android:id="@+id/rd2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/r1" android:textColor="#00ff11" android:textSize="20sp" /> 
  <RadioButton android:id="@+id/rd3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/r3" android:textColor="#00ff11" android:textSize="20sp" /> 
  </RadioGroup>
  
  <Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/b2" /> 
  </LinearLayout>